logs/scheduler/2024-02-27/task_python_operator.py.log
[2024-02-27T15:57:21.326+0000] {processor.py:161} INFO - Started process (PID=517) to work on /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:21.327+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/task_python_operator.py for tasks to queue
[2024-02-27T15:57:21.327+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:57:21.327+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:21.339+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:57:21.338+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/task_python_operator.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/task_python_operator.py", line 14
    @dag(schedule="@daily", start_date=datetime(2021, 12, 1), catchup=False)
SyntaxError: invalid syntax
[2024-02-27T15:57:21.340+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:21.371+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/task_python_operator.py took 0.047 seconds
[2024-02-27T15:57:35.537+0000] {processor.py:161} INFO - Started process (PID=519) to work on /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:35.538+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/task_python_operator.py for tasks to queue
[2024-02-27T15:57:35.539+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:57:35.538+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:35.550+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:57:35.550+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/task_python_operator.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/task_python_operator.py", line 14
    @dag(default_args=default_args, schedule_interval='@daily', catchup=False)
SyntaxError: invalid syntax
[2024-02-27T15:57:35.551+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:35.577+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/task_python_operator.py took 0.042 seconds
[2024-02-27T15:57:42.614+0000] {processor.py:161} INFO - Started process (PID=526) to work on /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:42.614+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/task_python_operator.py for tasks to queue
[2024-02-27T15:57:42.615+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:57:42.615+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:42.623+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:57:42.622+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/task_python_operator.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/task_python_operator.py", line 14
    @dag(default_args=default_args, schedule_interval='@daily', catchup=False):
                                                                              ^
SyntaxError: invalid syntax
[2024-02-27T15:57:42.623+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:57:42.651+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/task_python_operator.py took 0.039 seconds
[2024-02-27T15:58:12.938+0000] {processor.py:161} INFO - Started process (PID=534) to work on /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:58:12.938+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/task_python_operator.py for tasks to queue
[2024-02-27T15:58:12.939+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:58:12.939+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:58:12.951+0000] {logging_mixin.py:188} INFO - [2024-02-27T15:58:12.950+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/task_python_operator.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/task_python_operator.py", line 14
    @dag(default_args=default_args, schedule_interval='@daily', catchup=False):
                                                                              ^
SyntaxError: invalid syntax
[2024-02-27T15:58:12.951+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/task_python_operator.py
[2024-02-27T15:58:12.984+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/task_python_operator.py took 0.049 seconds
